SCSS organize & DRY

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To do list</title>
+
+    <!-- linking the HTML sheet with the google fonts used -->
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Playfair+Display:700&display=swap" rel="stylesheet">
+    
     <!-- linking the page to the font awesome kit -->
     <script src="https://kit.fontawesome.com/5356eff725.js" crossorigin="anonymous"></script>
 
