--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
         </table>
     </main>
 
+    <footer>
+        <p>Created by Hassan Elsayed</p>
+    </footer>
 
 
     <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
