--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +10,7 @@
     
     <!-- linking the page to the font awesome kit -->
     <script src="https://kit.fontawesome.com/5356eff725.js" crossorigin="anonymous"></script>
+
     <!-- linking the HTML to the css styles sheet -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -22,9 +22,9 @@
         <!-- form used to input to do items -->
         <form action="">
             <h1>To do list</h1>
-            <label for="Weekday">Please choose a weekday</label>
+            <label for="weekday">Please choose a weekday</label>
             <!-- dropdown menu -->
-            <select name="Weekday" id="Weekday">
+            <select name="weekday" id="weekday">
                 <option disabled selected>Weekday</option>
                 <option value="monday">Monday</option>
                 <option value="tuesday">Tuesday </option>
@@ -42,7 +42,6 @@
     </header>
 
     <main>
-        <!-- table heading -->
         <h2>weekly to do list</h2>
         <!-- to do table -->
         <table id="myTable">
@@ -109,9 +108,9 @@
         <p>Created by Hassan Elsayed</p>
     </footer>
 
-
+    <!-- loading jQuery -->
     <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
+    <!-- linking the HTML to the js script sheet -->
     <script src="script.js"></script>
 </body>
-
 </html>
