--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </main>
 
     <footer>
-        <p>Created by Hassan Elsayed</p>
+        <p>Copyright © 2020 Hassan Elsayed</p>
     </footer>
 
     <!-- loading jQuery -->
